@@ -6,12 +6,7 @@ import com.heliorm.mojo.annotated.AnnotatedPojoGenerator;
 import org.apache.maven.artifact.DependencyResolutionRequiredException;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
-import org.apache.maven.plugin.MojoFailureException;
-import org.apache.maven.plugins.annotations.Component;
-import org.apache.maven.plugins.annotations.LifecyclePhase;
-import org.apache.maven.plugins.annotations.Mojo;
-import org.apache.maven.plugins.annotations.Parameter;
-import org.apache.maven.plugins.annotations.ResolutionScope;
+import org.apache.maven.plugins.annotations.*;
 import org.apache.maven.project.MavenProject;
 
 import java.io.File;
@@ -21,12 +16,7 @@ import java.io.PrintWriter;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 import static java.lang.String.format;
 
@@ -34,7 +24,7 @@ import static java.lang.String.format;
  * @author gideon
  */
 @Mojo(name = "generate-model", defaultPhase = LifecyclePhase.PROCESS_CLASSES,
-        requiresDependencyResolution = ResolutionScope.COMPILE, requiresProject = true)
+        requiresDependencyResolution = ResolutionScope.COMPILE)
 public class GenerateModel extends AbstractMojo {
 
     @Parameter(property = "strategy", required = true)
@@ -47,45 +37,41 @@ public class GenerateModel extends AbstractMojo {
     private String resourceDir;
     @Parameter(property = "database", required = true)
     private String database;
-    @Parameter(property = "databaseClass", required = false)
+    @Parameter(property = "databaseClass")
     private String databaseClass;
     @Component
     private MavenProject project;
     private ClassLoader localClassLoader;
     private ClassLoader globalClassLoader;
 
-
-    private Generator gen;
-    private Modeller modeller;
-    private PrintWriter svc;
+    private Modeller<?> modeller;
 
     public GenerateModel() {
     }
 
     @Override
-    public void execute() throws MojoExecutionException, MojoFailureException {
+    public void execute() throws MojoExecutionException {
         try {
             setupClassLoader();
-            switch (strategy) {
-                case annotated:
-                    gen = new AnnotatedPojoGenerator(this, packages);
-                    break;
-                default:
-                    throw new MojoExecutionException(format("Unsupported POJO strategy '%s'. BUG?", strategy));
+            Generator<?> gen;
+            if (Objects.requireNonNull(strategy) == Generator.PojoStrategy.annotated) {
+                gen = new AnnotatedPojoGenerator(this, packages);
+            } else {
+                throw new MojoExecutionException(format("Unsupported POJO strategy '%s'. BUG?", strategy));
             }
             File dir = new File(resourceDir + "/META-INF/services/");
             if (!dir.exists()) {
                 dir.mkdirs();
             }
-            modeller = new Modeller(gen, packages);
+            modeller = new Modeller<>(gen, packages);
             Map<String, PackageDatabase> packageDatabases = modeller.getPackageDatabases();
-            svc = new PrintWriter(new FileWriter(resourceDir + "/META-INF/services/" + Database.class.getCanonicalName()));
-            Set<Output> outputs = new HashSet();
+            PrintWriter svc = new PrintWriter(new FileWriter(resourceDir + "/META-INF/services/" + Database.class.getCanonicalName()));
+            Set<Output> outputs = new HashSet<>();
             for (String pkg : packageDatabases.keySet()) {
                 PackageDatabase database = packageDatabases.get(pkg);
                 database.setSqlDatabase(this.database);
                 Output output = new Output(this, database, pkg);
-                for (Table table : database.getTables()) {
+                for (Table<?> table : database.getTables()) {
                     output.addTable(table);
                 }
                 outputs.add(output);
@@ -109,11 +95,11 @@ public class GenerateModel extends AbstractMojo {
         return globalClassLoader;
     }
 
-    String getTablesPackageFor(Table table) {
+    String getTablesPackageFor(Table<?> table) {
         return modeller.getPackageDatabase(table.getObjectClass().getCanonicalName()).getPackageName();
     }
 
-    String getDatabaseClassFor(Table table) {
+    String getDatabaseClassFor(Table<?> table) {
         if (databaseClass == null) {
             return getTablesPackageFor(table) + ".Tables";
         }
@@ -122,16 +108,15 @@ public class GenerateModel extends AbstractMojo {
 
 
     String getDatabaseClassFor(Database db) {
-        return getDatabaseClassFor(db.getTables().get(0));
+        return getDatabaseClassFor(db.getTables().getFirst());
     }
 
     /**
      * Get a class loader that will load classes compiled during the build
      *
-     * @return The class loader
      */
     private void setupClassLoader() throws GeneratorException {
-        List<String> classpathElements = null;
+        List<String> classpathElements;
         try {
             classpathElements = project.getCompileClasspathElements();
         } catch (DependencyResolutionRequiredException e) {
